--- a/index.html
+++ b/index.html
@@ -26,12 +26,45 @@
                         <div class="-mr-2 flex items-center md:hidden">
                             <button type="button" class="bg-gray-900 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:bg-gray-800 focus:outline-none focus:ring-2 focus-ring-inset focus:ring-white" aria-expanded="false">
                                 <span class="sr-only">Open main menu</span>
+                                <!-- Heroicon name: outline/menu -->
+                                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" /> 
+                                </svg>
                             </button>
                         </div>
                     </div>
+                    <div class="hidden space-x-8 md:flex md:ml-10">
+                      <a href="#" class="text-base font-medium text-white hover:text-gray-20">Catálogo</a>
+                      <a href="#" class="text-base font-medium text-white hover:text-gray-20">Quienes somos?</a>
+                      <a href="#" class="text-base font-medium text-white hover:text-gray-20">Contacto</a>
+                      <a href="#" class="text-base font-medium text-white hover:text-gray-20">Sucursales</a> 
+
+                    </div>
                    </div>
+                    <div class="hidden md:flex md:items-center md:space-x-x">
+                        <a href="#" class="text-base font-medium text-white hover:text-gray-300">
+                            Iniciar Sesion
+                        </a>
+                    </div>
                 </nav>
             </div>
         </header>
+        <main>
+            <div class="pt-10 bg gray-900 sm:pt-16 lg:pt-8 lg:pb-14 lg:overflow-hidden">
+               <div class="mx-auto max-w-7xl lg:px8">
+                <div class="lg:grid lg:grid-cols-2 lg:gap-8">
+                    <div class="mx-auto max-w-md px-4 sm:max-w-2x1 sm:px-6 sm:text=center lg:px-0 lg:text-left lg:flex lg:items-center">
+                        <div class="lg:py-24">
+                            <a href="#" class="inline-flex items-center text-white bg-black rounded-full p-1 pr-2 sm:text-base lg:text-sm xl:text-base hover:text-gray-200">
+                               <span class="px-3 py-0.5 text-white text-xs font-semibold leading-5 uppercase tracking-wide bg-gradient-to-r from-teal-500 to-cyan-600 rounded-full"> 50% de descuento en primera compra</span>
+                               <span class="ml-4 text-sm">Conoce nuestros paquetes que tenemos</span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+               </div>
+            </div>
+        </main>
     </div>
 </div>
