--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
                                <span class="ml-1 text-sm">Conoce nuestros paquetes
                         </a>
                             <!-- Heroicon name: solid/chevron-right -->
-                           <!-- Heroicon name: solid/chevron-right -->
                     <svg class="ml-2 w-5 h-5 text-Black" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 30" fill="white" aria-hidden="true">
                         <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
                       </svg>
                     </a>
-                    <h1 class="mt-4 text-4xl tracking-tight font-extrabold text-white sm:mt-5 sm:text-6xl lg:mt-6 xl:text-6xl">
+                    <h1 class="mt-4 text-4xl tracking-tight font-extrabold text-black sm:mt-5 sm:text-6xl lg:mt-6 xl:text-6xl">
                       <span class="block">El Equipo de tus suenos al alcance de un click</span>
                       <span class="bg-clip-text text-transparent bg-gradient-to-r from-teal-200 to-cyan-400 block">ship web apps</span>
                     </h1>
-                    <p class="mt-3 text-base text-gray-300 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
+                    <p class="mt-3 text-xl text-black sm:mt-4 sm:text-xl lg:text-base xl:text-xl">
                       No sabes como armar una PC? no te preocupes para eso estamos nosotros.
                     </p>
                     <div class="mt-10 sm:mt-12">
@@ -77,13 +76,13 @@
                         <div class="sm:flex">
                           <div class="min-w-0 flex-1">
                             <label for="email" class="sr-only">kelevra_wow26@hotmail.com</label>
-                            <input id="email" type="email" placeholder="Ingresa tu correo" class="block w-full px-4 py-3 rounded-md border-0 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-400 focus:ring-offset-gray-900">
+                            <input id="email" type="email" placeholder="Ingresa tu correo" class="block w-full px-5 py-3 rounded-md border-soild-1px-black text-base text-black placeholder-black focus:outline-black focus:ring-2 focus:ring-offset-2 focus:ring-cyan-400 focus:ring-offset-black">
                           </div>
                           <div class="mt-3 sm:mt-0 sm:ml-3">
                             <button type="submit" class="block w-full py-3 px-4 rounded-md shadow bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-medium hover:from-teal-600 hover:to-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-400 focus:ring-offset-gray-900" style="background-color: #369ba8;">Enviar</button>
                           </div>
                         </div>
-                        <p class="mt-3 text-sm text-gray-300 sm:mt-4">Te contactaremos de manera inmediata siempre estamos al pendiente de ti</a>.</p>
+                        <p class="mt-3 text-sm text-black sm:mt-4">Te contactaremos de manera inmediata siempre estamos al pendiente de ti</a>.</p>
                       </form>
                     </div>
                   </div>
